# nitrosense

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  implementation.md  my_laptop.md  nitrosense_info.md
docs/: handoff.md  official-app-analysis.md  setup.md
official_app/: README.md
packaging/: io.github.vimalyad.nitrosense.policy.in  nitrosense.desktop
scripts/: install-local.sh  package-release.sh
src/: app.rs  config.rs  fan_control.rs  graph.rs  main.rs  notifications.rs  polling.rs  profile.rs  sensors.rs  single_instance.rs  tray.rs
src/app/: formatting.rs  mod.rs  views.rs
src/app/views/: chrome.rs  fan_control.rs  graph_tab.rs  overview.rs  profile.rs
src/graph/: axis.rs  history.rs  hover.rs  tests.rs
src/hardware/: fan_control.rs  mod.rs  profile.rs  sensors.rs
src/services/: mod.rs  notifications.rs  polling.rs
src/ui/: theme.rs  widgets.rs
