[package]
name = "nitrosense"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui_plot = "0.27"
tokio = { version = "1", features = ["full"] }
tray-icon = { version = "0.14", optional = true }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png"] }

[features]
default = []
tray = ["dep:tray-icon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
